crates/cli/tests/snapshots/doctor__doctor_fails_when_active_pf_redirects_are_missing.snap
---
source: crates/cli/tests/doctor.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "PV doctor\n\nSystem\n[pass] State layout: 9 PV-owned directories have user-only permissions\n[pass] Database: read-only open succeeded; 12 migrations applied\n[pass] Privileged helper: available at version 2.0.0 with protocol 2\n\nRouting\n[pass] DNS config: system resolver uses port 35353\n[fail] Port redirect config: low-port redirects are inactive\n  evidence: pfctl; expected: HTTP 48080, HTTPS 48443; active: HTTP -, HTTPS -; observed: <timestamp>\n  repair: pv ports:install\n[pass] Local CA trust: system trust matches fingerprint <fingerprint>\n\nDaemon & jobs\n[pass] Daemon LaunchAgent: PV-owned LaunchAgent is installed\n  path: <tempdir>/home/Library/LaunchAgents/com.prvious.pv.daemon.plist\n[pass] Daemon socket: daemon answered health check\n  path: <tempdir>/home/.pv/run/pv.sock\n[pass] Recent jobs: no unresolved failed jobs\n[pass] Runtime states: no degraded or failed runtime observations\n[pass] Artifact manifest cache: cached manifest is present\n  path: <tempdir>/home/.pv/downloads/manifest.json\nSummary: 10 passed, 0 warning(s), 1 failed\n",
    stderr: "",
}
