crates/cli/tests/snapshots/doctor__doctor_is_read_only.snap
---
source: crates/cli/tests/doctor.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "PV doctor\n\nSystem\n[fail] State layout: missing ~/.pv state directory\n  path: <tempdir>/home/.pv\n  repair: pv setup\n[fail] Database: pv.db is missing\n  path: <tempdir>/home/.pv/pv.db\n  repair: pv setup\n[fail] Privileged helper: active release helper metadata is invalid: filesystem error at \"<tempdir>/home/.pv/bin/releases/0.2.5/pv-helper.json\": No such file or directory (os error 2)\n  repair: reinstall PV, then run `pv setup`\n\nRouting\n[fail] DNS config: prepared resolver config is missing\n  path: <tempdir>/home/.pv/config/resolver/test\n  repair: pv dns:install\n[fail] Port redirect config: low-port redirects are inactive\n  evidence: pfctl; expected: HTTP -, HTTPS -; active: HTTP -, HTTPS -; observed: <timestamp>\n  repair: pv ports:install\n[fail] Local CA files: local CA files are missing\n  certificate: <tempdir>/home/.pv/certificates/ca.pem; private key: <tempdir>/home/.pv/certificates/ca-key.pem\n  repair: pv ca:trust\n\nDaemon & jobs\n[fail] Daemon LaunchAgent: LaunchAgent is missing\n  path: <tempdir>/home/Library/LaunchAgents/com.prvious.pv.daemon.plist\n  repair: pv daemon:enable\n[fail] Daemon socket: daemon socket is missing\n  path: <tempdir>/home/.pv/run/pv.sock\n  repair: pv daemon:enable\n[warn] Recent jobs: skipped because pv.db is missing\n  repair: pv setup\n[warn] Runtime states: skipped because pv.db is missing\n  repair: pv setup\n[warn] Artifact manifest cache: cached artifact manifest is missing\n  path: <tempdir>/home/.pv/downloads/manifest.json\n  repair: pv setup\nSummary: 0 passed, 3 warning(s), 8 failed\n",
    stderr: "",
}
