crates/cli/tests/snapshots/doctor__doctor_on_a_terminal_healthy.snap
---
source: crates/cli/tests/doctor.rs
expression: healthy.stdout
---
[pv] doctor                                                                                                                                               v0.2.5
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────

SYSTEM
✓  State layout             9 PV-owned directories have user-only permissions
✓  Database                 read-only open succeeded; 12 migrations applied
✓  Privileged helper        available at version 1.0.0 with protocol 1

ROUTING
✓  DNS config               system resolver uses port 35353
✓  Port redirect config     low-port routing is active
   evidence: pfctl; expected: HTTP 48080, HTTPS 48443; active: HTTP 48080, HTTPS 48443; observed: <timestamp>
✓  Local CA trust           system trust matches fingerprint <fingerprint>

DAEMON & JOBS
✓  Daemon LaunchAgent       PV-owned LaunchAgent is installed
   path: <tempdir>/home/Library/LaunchAgents/com.prvious.pv.daemon.plist
✓  Daemon socket            daemon answered health check
   path: <tempdir>/home/.pv/run/pv.sock
✓  Recent jobs              no unresolved failed jobs
✓  Runtime states           no degraded or failed runtime observations
✓  Artifact manifest cache  cached manifest is present
   path: <tempdir>/home/.pv/downloads/manifest.json

✓  All 11 checks passed · 0 warnings · 0 failed
