crates/cli/tests/snapshots/doctor__doctor_passes_when_required_checks_pass.snap
---
source: crates/cli/tests/doctor.rs
expression: snapshot
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "PV doctor\n\nSystem\n[pass] State layout: 9 PV-owned directories have user-only permissions\n[pass] Database: read-only open succeeded; 12 migrations applied\n[pass] Privileged helper: available at version 1.0.0 with protocol 1\n\nRouting\n[pass] DNS config: system resolver uses port 35353\n[pass] Port redirect config: low-port routing is active\n  evidence: pfctl; expected: HTTP 48080, HTTPS 48443; active: HTTP 48080, HTTPS 48443; observed: <timestamp>\n[pass] Local CA trust: system trust matches fingerprint <fingerprint>\n\nDaemon & jobs\n[pass] Daemon LaunchAgent: PV-owned LaunchAgent is installed\n  path: <tempdir>/home/Library/LaunchAgents/com.prvious.pv.daemon.plist\n[pass] Daemon socket: daemon answered health check\n  path: <tempdir>/home/.pv/run/pv.sock\n[pass] Recent jobs: no unresolved failed jobs\n[pass] Runtime states: no degraded or failed runtime observations\n[pass] Artifact manifest cache: cached manifest is present\n  path: <tempdir>/home/.pv/downloads/manifest.json\nSummary: 11 passed, 0 warning(s), 0 failed\n",
        stderr: "",
    },
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "{\"sections\":[{\"title\":\"System\",\"checks\":[{\"status\":\"pass\",\"name\":\"State layout\",\"message\":\"9 PV-owned directories have user-only permissions\",\"detail\":null,\"repair\":null},{\"status\":\"pass\",\"name\":\"Database\",\"message\":\"read-only open succeeded; 12 migrations applied\",\"detail\":null,\"repair\":null},{\"status\":\"pass\",\"name\":\"Privileged helper\",\"message\":\"available at version 1.0.0 with protocol 1\",\"detail\":null,\"repair\":null}]},{\"title\":\"Routing\",\"checks\":[{\"status\":\"pass\",\"name\":\"DNS config\",\"message\":\"system resolver uses port 35353\",\"detail\":null,\"repair\":null},{\"status\":\"pass\",\"name\":\"Port redirect config\",\"message\":\"low-port routing is active\",\"detail\":\"evidence: pfctl; expected: HTTP 48080, HTTPS 48443; active: HTTP 48080, HTTPS 48443; observed: <timestamp>\",\"repair\":null,\"routing\":{\"state\":\"active\",\"evidence\":\"pfctl\",\"expected_http_port\":48080,\"expected_https_port\":48443,\"active_http_port\":48080,\"active_https_port\":48443,\"observed_at\":\"<timestamp>\"}},{\"status\":\"pass\",\"name\":\"Local CA trust\",\"message\":\"system trust matches fingerprint <fingerprint>\",\"detail\":null,\"repair\":null}]},{\"title\":\"Daemon & jobs\",\"checks\":[{\"status\":\"pass\",\"name\":\"Daemon LaunchAgent\",\"message\":\"PV-owned LaunchAgent is installed\",\"detail\":\"path: <tempdir>/home/Library/LaunchAgents/com.prvious.pv.daemon.plist\",\"repair\":null},{\"status\":\"pass\",\"name\":\"Daemon socket\",\"message\":\"daemon answered health check\",\"detail\":\"path: <tempdir>/home/.pv/run/pv.sock\",\"repair\":null},{\"status\":\"pass\",\"name\":\"Recent jobs\",\"message\":\"no unresolved failed jobs\",\"detail\":null,\"repair\":null},{\"status\":\"pass\",\"name\":\"Runtime states\",\"message\":\"no degraded or failed runtime observations\",\"detail\":null,\"repair\":null},{\"status\":\"pass\",\"name\":\"Artifact manifest cache\",\"message\":\"cached manifest is present\",\"detail\":\"path: <tempdir>/home/.pv/downloads/manifest.json\",\"repair\":null}]}]}\n",
        stderr: "",
    },
)
