crates/cli/tests/snapshots/doctor__doctor_reports_cross_account_helper_recovery.snap
---
source: crates/cli/tests/doctor.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "PV doctor\n\nSystem\n[pass] State layout: 9 PV-owned directories have user-only permissions\n[pass] Database: read-only open succeeded; 13 migrations applied\n[fail] Privileged helper: helper belongs to a different macOS account\n  peer UID 502 does not match installing UID 501\n  repair: use the original installing account to run pv uninstall; otherwise perform manual administrator recovery\n\nRouting\n[pass] DNS config: system resolver uses port 35353\n[pass] Port redirect config: low-port routing is active\n  evidence: pfctl; expected: HTTP 48080, HTTPS 48443; active: HTTP 48080, HTTPS 48443; observed: <timestamp>\n[pass] Local CA trust: system trust matches fingerprint <fingerprint>\n\nDaemon & jobs\n[pass] Daemon LaunchAgent: PV-owned LaunchAgent is installed\n  path: <tempdir>/home/Library/LaunchAgents/com.prvious.pv.daemon.plist\n[pass] Daemon socket: daemon answered health check\n  path: <tempdir>/home/.pv/run/pv.sock\n[pass] Recent jobs: no unresolved failed jobs\n[pass] Runtime states: no degraded or failed runtime observations\n[pass] Artifact manifest cache: cached manifest is present\n  path: <tempdir>/home/.pv/downloads/manifest.json\nSummary: 10 passed, 0 warning(s), 1 failed\n",
    stderr: "",
}
